--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,27 @@
 }
 
 .app-container {
-  position: absolute;
-  left: 10vw;
+  margin-left: 10vw;
   width: 80vw;
-  top: 10vh;
+  margin-top: 10vh;
   height: 80vh;
   background-color: #282c34;
   color: white;
   padding: 2%;
   font-family: 'Rubik', sans-serif;
   border-radius: 30px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.app-container a {
+  color: lightsteelblue;
+}
+
+.content-container {
+  height: 85%;
+  overflow: auto;
 }
 
 .form-button-container {
@@ -23,5 +34,9 @@
 }
 
 .button {
+  font-size: 1.1vw;
+}
+
+.table {
   font-size: 1.1vw;
 }
